# Quanta-Messager

./: LICENSE  README.md
server/: .env.example  .gitignore  .test.env  README.md  alembic.ini  pyproject.toml  pytest.ini
server/src/: database.py  main.py  settings.py
server/src/authentication/: models.py  router.py  schemas.py  services.py
server/src/events/: models.py  router.py  schemas.py  services.py
server/src/messages/: models.py  router.py  schemas.py  services.py
server/src/migrations/: env.py
server/src/migrations/versions/: 1.7c6a5f48c3f0_added_users_messages.py  2.4ab823f131d5_in_table_user_added_public_key.py  3.8f1b2fd26c20_add_events.py
server/src/service/: router_service.py
server/tests/: conftest.py  events_api.py  messages_api.py  services.py
server/tests/tests_integration/: test_api.py
server/tests/tests_unit/: test_encryption.py
